<resources>
    <string name="app_name">U Cast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_customer">List Customer</string>
    <string name="chose_all">Chose All</string>
    <string name="fahmi">Fahmi Abdul Aziz</string>
    <string name="no_hp">082384863761</string>
    <string name="detail_costumers">Details Costumer</string>
    <string name="send">Send</string>
    <string name="schedule">Schedule</string>
    <string name="messages">Messages</string>
    <string name="read_more">Read More</string>
    <string name="add_messages">Tambah Pesan</string>
    <string name="buat">Buat</string>
    <string name="subjek">Subjek</string>
    <string name="tulis_pesan">Tulis Pesan</string>
    <string name="everyday">Setiap Hari (08.00 WIB)</string>
    <string name="custom">Custom</string>
    <string name="atur_tgl">Atur Tanggal</string>
    <string name="pilih_schedule">Pilih Schedule</string>
    <string name="success">Success</string>
    <string name="schedule_dibuat">Schedule Telah Terbuat</string>
    <string name="kirim_lagi">Kirim Lagi</string>
    <string name="details">Details</string>
    <string name="terkirim">Terkirim</string>
    <string name="penerima_cast">Penerima Cast</string>
    <string name="ketik_disini">Ketik Disini</string>
    <string name="title_cast">Title Cast</string>
    <string name="isi_cast">Isi Cast</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>


    <string name="u_cast">U CAST</string>
    <string name="lewati">Lewati</string>
    <string name="lanjut">Lanjut</string>
    <string name="pesan">Mengirim Pesan Lebih Cepat</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hanya_dengan_beberapa_kali_klik">Hanya Dengan Beberapa Kali Klik</string>
    <string name="mempercepat_pekerjaan_anda">Mempercepat Pekerjaan Anda</string>
    <string name="hai_saudaraku_apa_kabarmu_hari_ini">Hai Saudaraku Apa Kabarmu Hari Ini?</string>
    <string name="nama_pengguna_atau_alamat_email">Nama Pengguna atau Alamat Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya">Belum Punya Akun?<font color="#ffff0000">, Daftar Disini</font></string>
    <string name="atau">Atau</string>
    <string name="everyweek">Setiap Minggu (08.00 WIB)</string>
    <string name="everimonth">Setiap Minggu (08.00 WIB)</string>
    <string name="everyyear">Setiap Tahun (08.00 WIB)</string>
</resources>