<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottomsheett"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:cardElevation="8dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView8"
                style="@style/TextView.poppinsnormalBlue1_10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="7 Oktober 2021"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/textView5"
                style="@style/TextView.poppinsboldBlack_18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/TextView.poppinsnormalBlue2_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/terkirim" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/schedule_in_active" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penerima_cast"
                    style="@style/TextView.poppinsnormalBlack_14sp"></TextView>
                <EditText
                    android:id="@+id/edtPenerimaCast"
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/bg_item_list_customers"
                    android:inputType="text"
                    android:hint="@string/ketik_disini"
                    style="@style/Edittext.primary"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_cast"
                    style="@style/TextView.poppinsnormalBlack_14sp"></TextView>
                <EditText
                    android:id="@+id/edtTitleCast"
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/bg_item_list_customers"
                    android:inputType="text"
                    android:hint="@string/ketik_disini"
                    style="@style/Edittext.primary"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_cast"
                    style="@style/TextView.poppinsnormalBlack_14sp"></TextView>
                <EditText
                    android:id="@+id/edtIsiCast"
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_item_list_customers"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    android:hint="@string/ketik_disini"
                    style="@style/Edittext.primary"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_marginRight="12dp"
                    style="@style/Button.secondary"
                    android:background="@drawable/btn_cancel"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="100dp"
                    android:layout_gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    style="@style/Button.secondary"
                    android:background="@drawable/btn_schedule"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>