<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/intro1"
    android:layout_height="match_parent"
    tools:context=".View.IntroSlider.IntroSlider1Fragment">



        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/background1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/group35"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text3"
            style="@style/TextView.poppinsboldWhite_30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="354dp"
            android:layout_marginEnd="20dp"
            android:text="@string/hanya_dengan_beberapa_kali_klik"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lorem1"
            style="@style/TextView.poppinsnormalWhite_16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="95dp"
            android:text="@string/loremipsum"
            app:layout_constraintEnd_toStartOf="@id/background1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text3" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="190dp"
            android:background="@drawable/bg_intro_slider_lewati"
            android:text="@string/lewati"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lorem1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlanjut1"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_intro_slider_lanjut"
            android:text="@string/lanjut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lorem1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
